update to the react version

--- a/react-app/package.json
+++ b/react-app/package.json
@@ -90,7 +90,7 @@
     "vite"
   ],
   "author": "Tom Sapletta <contact@tomsapletta.com>",
-  "license": "MIT",
+  "license": "Apache-2.0",
   "bugs": {
     "url": "https://github.com/askdomainer/www/issues"
   },
