--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   },
   "devDependencies": {
     "eslint": "^8.56.0",
-    "prettier": "^3.1.0"
+    "prettier": "^3.1.0",
+    "sharp": "^0.34.2"
   },
   "dependencies": {
     "mermaid": "^10.8.0"
