--- a/.env.example
+++ b/.env.example
@@ -10,7 +10,7 @@ NPM_TOKEN=your_npm_token
 
 # PyPI Configuration
 PYPI_USERNAME=your_pypi_username
-PYPI_PASSWORD=your_pypi_password
+PYPI_TOKEN=your_pypi_token  # API token from PyPI (preferred over password)
 PYPI_EMAIL=your_pypi_email
 
 # Docker Hub Configuration
