--- a/react-app/package.json
+++ b/react-app/package.json
@@ -25,17 +25,21 @@
     "test:coverage": "vitest run --coverage"
   },
   "dependencies": {
-    "@emotion/react": "^11.14.0",
-    "@mantine/core": "^8.0.1",
-    "@mantine/hooks": "^8.0.1",
+    "@emotion/react": "^11.11.0",
+    "@mantine/core": "^7.5.0",
+    "@mantine/hooks": "^7.5.0",
     "@tabler/icons-react": "^2.47.0",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
-    "react-router-dom": "^7.6.1"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.20.0"
   },
   "peerDependencies": {
-    "react": ">=16.8.0",
-    "react-dom": ">=16.8.0"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
+  },
+  "resolutions": {
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.23.5",
@@ -52,12 +56,12 @@
     "@storybook/react-vite": "^8.3.0",
     "@storybook/testing-library": "^0.2.2",
     "@types/node": "^20.10.0",
-    "@types/react": "^19.1.2",
-    "@types/react-dom": "^19.1.2",
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.0",
     "@typescript-eslint/eslint-plugin": "^7.0.0",
     "@typescript-eslint/parser": "^7.0.0",
     "@vitejs/plugin-react": "^4.4.1",
-    "babel-jest": "^30.0.0",
+    "babel-jest": "^29.7.0",
     "babel-loader": "^9.1.3",
     "eslint": "^9.25.0",
     "eslint-config-prettier": "^9.0.0",
@@ -69,14 +73,17 @@
     "eslint-plugin-react-refresh": "^0.4.19",
     "eslint-plugin-storybook": "^0.8.0",
     "globals": "^16.0.0",
-    "identity-obj-proxy": "^3.1.0",
+    "identity-obj-proxy": "^3.0.0",
     "prettier": "^3.0.0",
     "sass": "^1.70.0",
     "storybook": "^8.3.0",
     "typescript": "^5.3.0",
     "vite": "^6.3.5",
     "vite-plugin-dts": "^3.9.0",
-    "vitest": "^1.0.0"
+    "vitest": "^1.0.0",
+    "@testing-library/react": "^14.1.2",
+    "@testing-library/jest-dom": "^6.1.5",
+    "@testing-library/user-event": "^14.5.1"
   },
   "repository": {
     "type": "git",
