--- a/.env.example
+++ b/.env.example
@@ -1,27 +1,160 @@
+# ========================
+# Core Application Settings
+# ========================
+APP_NAME=DigitName
+APP_ENV=development
+APP_DEBUG=true
+APP_URL=http://localhost:8001
+APP_TIMEZONE=UTC
+
+# ========================
+# Frontend Configuration
+# ========================
+FRONTEND_URL=http://localhost:3000
+NEXT_PUBLIC_API_URL=http://localhost:8000/api
+
+# ========================
+# Backend Configuration
+# ========================
+BACKEND_PORT=8000
+NODE_ENV=development
+
+# ========================
+# Database Configuration
+# ========================
+DB_CONNECTION=mysql
+DB_HOST=127.0.0.1
+DB_PORT=3306
+DB_DATABASE=digitname
+DB_USERNAME=root
+DB_PASSWORD=
+
+# ========================
+# Redis Configuration
+# ========================
+REDIS_HOST=127.0.0.1
+REDIS_PASSWORD=null
+REDIS_PORT=6379
+
+# ========================
 # GitHub Configuration
+# ========================
+GITHUB_CLIENT_ID=your_github_client_id
+GITHUB_CLIENT_SECRET=your_github_client_secret
+GITHUB_CALLBACK_URL=${APP_URL}/auth/github/callback
 GITHUB_USERNAME=your_github_username
 GITHUB_TOKEN=your_github_token
 GITHUB_EMAIL=your_github_email
 
+# ========================
 # NPM Configuration
+# ========================
 NPM_USERNAME=your_npm_username
 NPM_EMAIL=your_npm_email
 NPM_TOKEN=your_npm_token
 
-# PyPI Configuration
+# ========================
+# Python/PyPI Configuration
+# ========================
 PYPI_USERNAME=your_pypi_username
-PYPI_TOKEN=your_pypi_token  # API token from PyPI (preferred over password)
+PYPI_TOKEN=your_pypi_token
 PYPI_EMAIL=your_pypi_email
+PYTHONUNBUFFERED=1
+PYTHONPATH=/app
 
-# Docker Hub Configuration
+# ========================
+# Docker Configuration
+# ========================
 DOCKERHUB_USERNAME=your_dockerhub_username
 DOCKERHUB_TOKEN=your_dockerhub_token
+DOCKER_NETWORK=digitname_network
 
-# GitLab Configuration
-GITLAB_USERNAME=your_gitlab_username
+# ========================
+# PHP/Composer Configuration
+# ========================
+COMPOSER_HOME=/usr/local/composer
+COMPOSER_ALLOW_SUPERUSER=1
+
+# ========================
+# Database URLs (for services)
+# ========================
+DATABASE_URL=mysql://${DB_USERNAME}:${DB_PASSWORD}@${DB_HOST}:${DB_PORT}/${DB_DATABASE}?charset=utf8mb4&serverVersion=8.0
+REDIS_URL=redis://${REDIS_HOST}:${REDIS_PORT}
+
+# ========================
+# Security
+# ========================
+APP_KEY=base64:generate_a_secure_key_here
+JWT_SECRET=your_jwt_secret_here
+SESSION_SECRET=your_session_secret_here
+
+# ========================
+# Email Configuration
+# ========================
+MAIL_MAILER=smtp
+MAIL_HOST=mailhog
+MAIL_PORT=1025
+MAIL_USERNAME=null
+MAIL_PASSWORD=null
+MAIL_ENCRYPTION=null
+MAIL_FROM_ADDRESS="hello@digitname.com"
+MAIL_FROM_NAME="${APP_NAME}"
+
+# ========================
+# Storage
+# ========================
+FILESYSTEM_DRIVER=public
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
+AWS_DEFAULT_REGION=us-east-1
+AWS_BUCKET=
+AWS_USE_PATH_STYLE_ENDPOINT=false
+
+# ========================
+# Monitoring & Logging
+# ========================
+SENTRY_DSN=your_sentry_dsn
+LOG_CHANNEL=stack
+LOG_LEVEL=debug
+
+# ========================
+# Feature Flags
+# ========================
+FEATURE_REGISTRATION=true
+FEATURE_EMAIL_VERIFICATION=true
+FEATURE_TWO_FACTOR_AUTH=false
+
+# ========================
+# External Services
+# ========================
+# GitLab
 GITLAB_TOKEN=your_gitlab_token
+GITLAB_USERNAME=your_gitlab_username
 GITLAB_EMAIL=your_gitlab_email
 
 # Domain Configuration
 DOMAIN_NAME=digitname.com
 ADMIN_EMAIL=admin@digitname.com
+
+# ========================
+# Development Tools
+# ========================
+# BrowserSync
+BROWSER_SYNC_PORT=3001
+BROWSER_SYNC_PROXY=${FRONTEND_URL}
+
+# Debugging
+XDEBUG_MODE=off
+XDEBUG_CONFIG="client_host=host.docker.internal client_port=9003"
+
+# ========================
+# Deployment
+# ========================
+DEPLOYMENT_ENV=staging
+CI_CD_TOKEN=your_ci_cd_token
+
+# ========================
+# Composer Specific
+# ========================
+COMPOSER_MEMORY_LIMIT=-1
+COMPOSER_NO_INTERACTION=1
