update portfolio sources and services

--- a/.env.example
+++ b/.env.example
@@ -37,6 +37,15 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 # ========================
+# Hugging Face Configuration
+# ========================
+HUGGINGFACE_USERNAME=your_hf_username
+HUGGINGFACE_TOKEN=your_hf_token
+HUGGINGFACE_API_URL=https://huggingface.co/api
+HUGGINGFACE_SPACES_URL=https://huggingface.co/spaces
+HUGGINGFACE_MODELS_URL=https://huggingface.co/models
+
+# ========================
 # GitHub Configuration
 # ========================
 GITHUB_CLIENT_ID=your_github_client_id
