--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "format": "prettier --write ."
   },
   "devDependencies": {
+    "canvas": "^3.1.0",
     "eslint": "^8.56.0",
     "prettier": "^3.1.0",
     "sharp": "^0.34.2"
