--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,9 @@
 # Core dependencies
-# Add your Python package dependencies here
-# Example:
-# flask==2.0.1
-# requests==2.26.0
+python-dotenv==1.0.0
+typer>=0.4.0
 
 # Development dependencies
 black==22.3.0
 flake8==4.0.1
 pytest==7.0.1
+pytest-cov==3.0.0
