--- a/package.json
+++ b/package.json
@@ -3,10 +3,12 @@
   "version": "1.0.0",
   "description": "Digital naming and domain management tools",
   "scripts": {
-    "start": "python -m http.server 8000",
+    "start": "python server.py",
+    "dev": "python -m http.server 8002",
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "eslint .",
-    "format": "prettier --write ."
+    "format": "prettier --write .",
+    "build": "echo 'No build step required for static site'"
   },
   "devDependencies": {
     "canvas": "^3.1.0",
