--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,16 @@
 # Core dependencies
+fastapi==0.104.1
+uvicorn[standard]==0.24.0
+gunicorn==21.2.0
 python-dotenv==1.0.0
 typer>=0.4.0
+python-multipart==0.0.6
+pydantic==2.4.2
+httpx==0.25.1
 
 # Development dependencies
-black==22.3.0
-flake8==4.0.1
-pytest==7.0.1
-pytest-cov==3.0.0
+black==23.11.0
+flake8==6.1.0
+pytest==7.4.3
+pytest-cov==4.1.0
+pytest-asyncio==0.21.1
